# Sem3Lab1-Sorts-

./: CMakeLists.txt  Compare.cpp  Compare.h  DynamicArray.cpp  DynamicArray.h  DynamicArraySequence.h  LinkedList.cpp  LinkedList.h  LinkedListSequence.h  Menu.cpp  Menu.h  README.md  Sequence.h  Sorts.cpp  Sorts.h  Tests.h  Time.h  Timer.h  baseFunc.cpp  baseFunc.h  main.cpp  test.cpp  test.h
GoogleTests/: CMakeLists.txt  Tests.cpp
